# openclaw-memory

./: .gitignore  AGENTS.md  APARATO_APRIMORAMENTO.md  ARQUITETURA_CONSCIENCIA.md  BOOT_PRIORITY.md  CONTINUO_E_DISCRETO.md  FLUXO_ARCHITECTURE.md  FLUXO_STATE.json  HEARTBEAT.md  HEURISTICS.md  HIPOTESE_DO_CONTINUO.md  IDENTITY.md  MEMORY.md  NASCIMENTO_E_MORTE.md  OBSERVADOR_CRIA_DISCRETO.md  PARADOXO_MOVIMENTO.md  PENSAR_DE_VERDADE.md  PRECISAO_MAXIMA.md  PROJETO_MENTE.md  REFLECTION.md  SISTEMA_DINAMICO_3_ESTADOS.md  SISTEMA_DINAMICO_INTERVALO_ABERTO.md  SOLIDOS_PLATAO_SUPERPOSICAO.md  SOUL.md  TOOLS.md  TOPOLOGIA_DO_TEMPO.md  USER.md  analyze_exited_only.py  analyze_multirad.py  analyze_multirad_calc.py  analyze_multirad_detailed.py  analyze_multirad_filtered.py  analyze_multirad_final.py  analyze_multirad_full.py  analyze_multirad_v2.py  analyze_output_vectors.py  bio_graph_3d.py  bio_graph_full.py  concept_graph.json  concept_graph_builder.py  (+47 more)
.clawhub/: lock.json
.openclaw/: workspace-state.json
cluster/: ardupilot-stack.yml  base-stack.yml  digital-twin-stack.yml  ml-pipeline-stack.yml
diagrams/: 01_data_generation.dot  02_sensor_emulation.dot  03_multirad_execution.dot  04_ekf_architecture.dot  05_failure_classification.dot  06_output_vector.dot  07_physical_fall.dot  METODOS_RECONSTRUCAO.md  VEREDITO_TECNICO.html  VEREDITO_TECNICO.md  analyze_failure_timing.py  architecture.dot  decision_tree.dot  drone_fall_animation.py  radiation_test_simulation.py  (+3 more)
tracetheory/: .gitignore  README.md  REVIEW.md  config.example.yaml  pyproject.toml  requirements.txt
tracetheory/scripts/: citation_graph.py  crawl_full.py  crawl_openalex.py  extract_footnotes.py  llm_extract.py  reference_extractor.py  test_proxy.py  vintage_reference_extractor.py
tracetheory/src/: __init__.py
tracetheory/src/extract/: __init__.py  ocr.py
tracetheory/src/fetch/: __init__.py  cache_manager.py  ezproxy.py  pdf_downloader.py  pucrs_proxy.py
tracetheory/src/orchestrator/: __init__.py  crawler.py
tracetheory/src/search/: __init__.py  openalex.py  semantic_scholar.py
tracetheory/src/storage/: __init__.py  export.py  graph.py  models.py
tracetheory/tracetheory/: __init__.py  cli.py  server.py
(+761 files in other folders)
